<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Bridge User</string>

    <string name="bold" tools:ignore="ReferenceType">@font/latobold</string>
    <string name="light" tools:ignore="ReferenceType">@font/latolight</string>
    <string name="regular" tools:ignore="ReferenceType">@font/latoregular</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="aboutQuote">I like the dreams of the future better than the history of the past.</string>
    <string name="aboutCollege">It was the year 1991 Shri Narayan Das Agrawal decided to fulfil the dream of his father, Late Shri Ganeshi Lal Agrawal, of establishing an institute for quality education to the people and the region &amp; beyond. and initiated Sri Jagannath Prasad Ganeshi Lal Bajaj Charitable Trust Samiti in an attempt to make the holy city Mathura a recognized destination for knowledge seekers from different spheres of life. This is what led to the foundation of a milestone at the karmabhoomi of the versatile and sagacious Lord Krishna. GLA has been actively involved with social causes since its very inception and has drawn appreciation from one and all for its works in various facets of societal paradigms.
    </string>
    <string name="notice">Notice</string>
    <string name="btech">Engineering is one those fields to which no geographical boundaries apply. Computer Science Professionals from India easily secure jobs, as per their skills and expertise, in MNCs all across the world. From software and app development to artificial intelligence, Computer Science is one such field that has transformed our lives to an extent that we underestimate the smart technology that assists us in the day to day tasks</string>
    <string name="bba"> This course from one of the best BBA Colleges in UP specifies the intellectual and behavioral competencies that management under-graduate students should possess and aims to provide a foundation for their future professional and personal development. The objective of the course is to develop competency in the business management concepts, theory and practices. BBA course curriculum also aims at developing viable alternatives and making effective decisions in international business settings.</string>
    <string name="mba">Today\'s business environment is characterized by dynamic uncertainties and complexities, which makes the work of managers and organizational leaders extremely challenging. There are new products, services and business processes that are being engineered to meet contemporary requirements of the industry. The Scenario at Corporate worldhas been changing rapidly for the past few years and there has been a dynamic upsurge in demand of professionals who can handle the complex and challenging work profiles effectively and efficiently. </string>

    <string name="bca">Bachelor of Computer Application (BCA) is a three year degree program which lays the foundation for a rewarding career in IT industry. BCA Programme emphasizes on computer application oriented courses like C++, Java, Python, Web Application Development, etc. There are two projects one minor followed by major in the final semester. Each semester has lab course where the students have to do compulsory lab assignments per week. It helps you achieve your career goal in a better and more organized manner. Also, a large number of corporations are hiring BCA graduates contending that they are as efficient in carrying out tasks as any Bachelor of Engineering (BE) graduate specializing in computers.</string>
    <string name="ballb">B.A. L.L.B. (Hons.) programs are 5-year integrated programs with Honors degree, designed to address contemporary legal issues in the fast-changing socio-economic and political environment of today with special emphasis on global matters. The Institute has developed a challenging course curriculum with a cutting edge pedagogy and clinical legal training as per industry demand and requirements.

GLA University is a top Law college in UP offering the 5-year integrated B.A. L.L.B. The course covers the specific fields of Law such as Criminal Laws, Administrative Laws, Tax Laws, Corporate Laws, Patent Laws, International Laws, Labor Laws, and other various types of Laws. Students require excellent reasoning and aptitude skills along with good general knowledge and communication &amp; reading skills to be successful in this highly competitive field.</string>
    <string name="phd"> PhDs are awarded for programs across the whole breadth of academic fields. Because it is an earned research degree, those studying for a PhD are usually required to produce original research that expands the boundaries of knowledge, normally in the form of a thesis or dissertation, and defend their work against experts in the field. The completion of a PhD is often a requirement for employment as a university professor, researcher, or scientist in many fields</string>


</resources>